tests/baselines/reference/thisTypeInBasePropertyAndDerivedContainerOfBase01.errors.txt
tests/cases/conformance/types/thisType/thisTypeInBasePropertyAndDerivedContainerOfBase01.ts(11,21): error TS2344: Type 'this' does not satisfy the constraint 'Foo'.
  Type 'Bar' is not assignable to type 'Foo'.
    Types of property 'self' are incompatible.
      Type 'Bar' is not assignable to type 'this'.


==== tests/cases/conformance/types/thisType/thisTypeInBasePropertyAndDerivedContainerOfBase01.ts (1 errors) ====
    
    interface BoxOfFoo<T extends Foo> {
        item: T
    }
    
    interface Foo {
        self: this;
    }
    
    interface Bar extends Foo {
        other: BoxOfFoo<this>;
                        ~~~~
!!! error TS2344: Type 'this' does not satisfy the constraint 'Foo'.
!!! error TS2344:   Type 'Bar' is not assignable to type 'Foo'.
!!! error TS2344:     Types of property 'self' are incompatible.
!!! error TS2344:       Type 'Bar' is not assignable to type 'this'.
    }